@@ -1,3 +1,8 @@
+2005-05-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/define-music-types.scm (music-descriptions): remove
+	UntransposableMusic
+
 2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/output-ps.scm (glyph-string): remove / before CIDs.
